# cautoh

./: .gitignore  LICENSE  README.md  next.config.js  package.json
aqua/: emiss_getter.aqua
cauto/: package.json
cauto/public/: index.html
cauto/src/: App.css  App.tsx  index.css  index.tsx
cauto/src/_aqua/: emiss_getter.ts
cauto/src/components/: Chart.tsx  Compute.css  Compute.tsx  Controlls.tsx  Distances.tsx  Options.css  Options.tsx
cauto/src/utils/: types.ts
configs/: Config.toml  emiss_getter_cfg.json  emiss_getter_deploy_cfg.json
emiss_getter/: Cargo.toml
emiss_getter/src/: main.rs
scripts/: build.sh
src/: index.css  index.scss
src/components/: Chart.tsx  Compute.css  Compute.tsx  Controlls.css  Controlls.tsx  CurrentVehicle.tsx  Options.css  RenderVehicleOptions.tsx
src/components/Buttons/: BaseBtn.tsx  RouteBtn.tsx
src/components/Chart/: Chart.module.scss  index.tsx
src/components/CurrentVehicle/: CurrentVehicle.module.scss  index.tsx
src/components/Layout/: Header.tsx
src/contexts/: AppContext.tsx
src/hooks/: useCopy.tsx
src/pages/: _app.tsx  compute.tsx  connect.tsx  index.tsx  linkAccount.tsx
src/pages/api/: createToken.ts  getBalances.ts  mintCOOtkn.ts  pullData.ts  pushData.ts  server.js
src/pages/compute/: compute.scss  index.tsx
src/pages/connect/: connect.module.scss  index.tsx
src/pages/linkAccount/: index.tsx  (+1 more)
src/styles/: _colours.scss  _fonts.scss  _variables.scss  index.scss
src/types/: api.ts  index.ts
src/utils/: configs.ts  hashpack.ts  helpers.ts  travel.ts  types.ts  vehicle.ts
(+9 files in other folders)
