[package]
name = "emiss_getter"
version = "0.1.0"
authors = ["HenricoW"]
edition = "2018"
description = "emissions-getter-service, a Marine wasi module"
license = "Apache-2.0"

[[bin]]
name = "emiss_getter"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.6.14"
log = "0.4.14"
picorand = "0.1.1"
fstrings = "0.2.3"
serde_json = "1.0.57"

[dev]
[profile.release]
opt-level = "s"
